2009-11-18  Andrew Haley  <aph@redhat.com>

	* java/util/TreeMap.java (anonymous class.size()): Debogosify.
	anonymous class.clear(): Likewise.

2009-10-22  Andrew Haley  <aph@redhat.com>

	* native/jni/native-lib/cpnet.c (cpnet_addMembership): Fix
	aliasing warning.
	(cpnet_dropMembership): Likewise.

2009-10-21  Richard Guenther  <rguenther@suse.de>

	PR cp-tools/39177
	* tools/gnu/classpath/tools/jar/Creator.java (writeCommandLineEntries):
	Do not use uninitialized manifest.

2009-08-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/cp-hacking.texinfo (Needed Tools and Libraries): Bump
	Autoconf version to 2.64, Automake to 1.11, M4 to 1.4.6.

2009-07-08  Chris Burdess  <dog@gnu.org>

	PR xml/40663:
	* javax/xml/stream/XMLEventFactory.java,
	* javax/xml/stream/XMLInputFactory.java,
	* javax/xml/stream/XMLOutputFactory.java,
	* javax/xml/stream/events/Namespace.java: Update API to match final
	  version of StAX.
	* javax/xml/stream/util/ReaderDelegate.java: Removed.
	* javax/xml/stream/util/StreamReaderDelegate.java: Added (renamed
	  from ReaderDelegate)
	* gnu/xml/stream/FilteredStreamReader.java,
	* gnu/xml/stream/NamespaceImpl.java,
	* gnu/xml/stream/XIncludeFilter.java,
	* gnu/xml/stream/XMLEventAllocatorImpl.java,
	* gnu/xml/stream/XMLEventFactoryImpl.java: Update implementation to
	  match final version of StAX API.
	
2009-07-06  Ludovic Claude  <ludovic.claude@laposte.net>

	PR xml/40653:
	* gnu/xml/stream/XMLStreamWriterImpl.java:
	Weaken testing of namespace prefix to match
	reference implementation and spec.
	
2009-07-07  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/40630
	* java/util/Scanner.java:
	(myCoreNext(boolean, Pattern)): Set tmp2 to
	null if the string is empty (i.e. we are at
	the end of the file).
	* java/util/regex/Matcher.java:
	(toMatchResult()): Check that match is non-null
	before attempting to clone it.

2009-07-07  Andrew John Hughes  <ahughes@redhat.com>

	* java/util/Scanner.java,
	* java/util/regex/Matcher.java: