@@ -1,3 +1,7 @@
+2010-01-12  Jeroen Frijters  <jeroen@frijters.net>
+
+	* java/util/zip/Inflater. java (inflate(byte[],int,int)): Fix for #41696.
+
 2009-11-18  Andrew Haley  <aph@redhat.com>
 
 	* java/util/TreeMap.java (anonymous class.size()): Debogosify.
